# nemesis

./: .gitignore  LICENSE  Nem.hs  Nemesis  Nemesis.hs  Rakefile  changelog.md  knownissue.md  nemesis.cabal  readme.md  report.html
src/: Main.hs  Runner.hs
src/Nemesis/: Runner.hs  Util.hs
src/System/: Nemesis.hs
src/System/FilePath/Glob/: Directory.hs  Utils.hs
src/System/Nemesis/: DSL.hs  Env.hs  Runner.hs  Util.hs
tasks/: haskell.rake  stats.rake
test/: N1.hs  N2.hs  N3.hs
