Name:                 nemesis
Version:              2013.6.16
Build-type:           Simple
Synopsis:             a task management tool for Haskell
Description:          Organize common shell tasks into a meaningful tree like structure with dependency tracking

License:              BSD3
License-file:         LICENSE
Author:               Jinjing Wang
Maintainer:           Jinjing Wang <nfjinjing@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
homepage:             http://github.com/nfjinjing/nemesis
source-repository:    head
                      type: git
                      location: https://github.com/nfjinjing/nemesis.git

data-files:           readme.md
                    , changelog.md
                    , known-issues.md
                    , Nemesis
                    , test/N1.hs
                    , test/N2.hs
                    , test/N3.hs
library
  ghc-options: -Wall
  build-depends:      base >= 4 && < 100
                    , time
                    , mtl
                    , process
                    , containers
                    , air
                    , dlist
                    , Glob
                    , directory
                      
  hs-source-dirs: src/
  exposed-modules:  
                      System.Nemesis
                      System.Nemesis.DSL
                      System.Nemesis.Env
  other-modules:
                      System.Nemesis.Util
                      
   

